<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ActivityDetail">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/back_button"
        android:padding="0dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/openLinkButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:tint="@android:color/holo_purple"/>

    <ProgressBar
        android:id="@+id/progressBarDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/openLinkButton"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/event_image_description"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/baseline_favorite_24"
                android:contentDescription="@string/favorite_button"
                android:background="?attr/selectableItemBackground"
                app:tint="@android:color/holo_purple"
            />


            <TextView
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:contentDescription="@string/event_name"
                android:textColor="?attr/colorPrimary"/>

            <TextView
                android:id="@+id/eventOrganizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:contentDescription="@string/event_owner"
                android:textColor="?attr/colorPrimaryVariant"/>

            <TextView
                android:id="@+id/eventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:contentDescription="@string/event_begin_time"
                android:textColor="?attr/colorPrimaryVariant"/>

            <TextView
                android:id="@+id/remainingQuota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:contentDescription="@string/event_quota"
                android:textColor="?attr/colorPrimaryVariant"/>

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:contentDescription="@string/event_summary"
                android:textColor="?attr/colorPrimaryVariant"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/openLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
