<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/subheader_text"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimaryVariant" />

    <TextView
        android:id="@+id/tv_upcoming_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_events"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_finished_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_events"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_finished_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</LinearLayout>