<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="10dp"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Event Image -->
        <ImageView
            android:id="@+id/ivMediaCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/event_image_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Event Name -->
        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/ivMediaCover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Event Begin Time -->
        <TextView
            android:id="@+id/tvEventBeginTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_begin_time"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btnDeleteFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/favorite_button"
            app:layout_constraintTop_toBottomOf="@id/tvEventBeginTime"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_delete_24"
            app:tint="@android:color/holo_purple" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
